# tg-downloader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yml  dev-compose.yml
.github/workflows/: deploy.yml
bot-api-data/: tqueue.binlog
bot-api-data/5000162251:AAFDGnFQDTUxDX4lG0f-zsVosLSwulEMJ1Y:T/: td_test.binlog
migrations/: 0001_initial.sql  0002_add_format_to_pending_downloads.sql
src/: convert.rs  db.rs  errors.rs  main.rs  migrations.rs  schema.rs  subscription.rs  temp_file.rs  utils.rs  youtube.rs
src/commands/: cancel.rs  grant.rs  mod.rs  premium.rs  queue.rs  start.rs
src/handlers/: duplicated_link_received.rs  error_handler.rs  format_callback_received.rs  format_first_received.rs  format_received.rs  link_received.rs  mod.rs  payment.rs  quality_received.rs  video_received.rs
src/queue/: mod.rs
src/video/: convert.rs  info.rs  mod.rs  youtube.rs
