[package]
name = "tg-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
teloxide = { version = "0.15.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["full"] }
strum = { version = "0.27", features = ["derive"] }
rand = "0.9.1"
tokio-util = "0.7.15"
