[package]
name = "tg-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
teloxide = { version = "0.15.0", features = ["macros"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty_env_logger = "0.5"
tokio = { version = "1.8", features = ["macros", "process"] }
strum = { version = "0.27", features = ["derive"] }
